// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Generate Command Integration > Generator Integration > should generate all files for a basic config > context 1`] = `
"/**
 * Auto-generated context factory
 *
 * This module provides a simple API for creating OpenSaas contexts.
 * It abstracts away Prisma client management and configuration.
 *
 * DO NOT EDIT - This file is automatically generated by 'pnpm generate'
 */

import { getContext as getOpensaasContext } from '@opensaas/stack-core'
import { PrismaClient } from './prisma-client'
import config from '../opensaas.config'

// Internal Prisma singleton - managed automatically
const globalForPrisma = globalThis as unknown as { prisma: PrismaClient | undefined }
const prisma = globalForPrisma.prisma ?? new PrismaClient()
if (process.env.NODE_ENV !== 'production') globalForPrisma.prisma = prisma

/**
 * Get OpenSaas context with optional session
 *
 * @param session - Optional session object (structure defined by your application)
 *
 * @example
 * \`\`\`typescript
 * // Anonymous access
 * const context = getContext()
 * const posts = await context.db.post.findMany()
 *
 * // Authenticated access
 * const context = getContext({ userId: 'user-123' })
 * const myPosts = await context.db.post.findMany()
 * \`\`\`
 */
export function getContext(session?: { userId?: string; [key: string]: unknown } | null) {
  return getOpensaasContext(config, prisma, session ?? null)
}

export const rawOpensaasContext = getContext()
"
`;

exports[`Generate Command Integration > Generator Integration > should generate all files for a basic config > prisma-schema 1`] = `
"generator client {
  provider = "prisma-client-js"
  output   = "../.opensaas/prisma-client"
}

datasource db {
  provider = "sqlite"
  url      = env("DATABASE_URL")
}

model User {
  id        String   @id @default(cuid())
  name         String
  email        String
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}
"
`;

exports[`Generate Command Integration > Generator Integration > should generate all files for a basic config > types 1`] = `
"/**
 * Generated types from OpenSaas configuration
 * DO NOT EDIT - This file is automatically generated
 */

export type User = {
  id: string
  name: string
  email: string
  createdAt: Date
  updatedAt: Date
}

export type UserCreateInput = {
  name: string
  email: string
}

export type UserUpdateInput = {
  name?: string
  email?: string
}

export type UserWhereInput = {
  id?: string
  AND?: Array<UserWhereInput>
  OR?: Array<UserWhereInput>
  NOT?: UserWhereInput
  name?: { equals?: string, not?: string }
  email?: { equals?: string, not?: string }
}

export type Context = {
  db: {
    user: {
      findUnique: (args: {
        where: { id: string }
        include?: any
      }) => Promise<User | null>
      findMany: (args?: {
        where?: UserWhereInput
        take?: number
        skip?: number
        include?: any
      }) => Promise<User[]>
      create: (args: {
        data: UserCreateInput
      }) => Promise<User | null>
      update: (args: {
        where: { id: string }
        data: UserUpdateInput
      }) => Promise<User | null>
      delete: (args: {
        where: { id: string }
      }) => Promise<User | null>
      count: (args?: {
        where?: UserWhereInput
      }) => Promise<number>
    }
  }
  session: any
  prisma: any  // Your PrismaClient instance
}"
`;

exports[`Generate Command Integration > Generator Integration > should generate consistent output across multiple runs > consistent-output 1`] = `
"generator client {
  provider = "prisma-client-js"
  output   = "../.opensaas/prisma-client"
}

datasource db {
  provider = "sqlite"
  url      = env("DATABASE_URL")
}

model User {
  id        String   @id @default(cuid())
  name         String?
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}
"
`;

exports[`Generate Command Integration > Generator Integration > should handle different database providers > mysql-provider 1`] = `
"generator client {
  provider = "prisma-client-js"
  output   = "../.opensaas/prisma-client"
}

datasource db {
  provider = "mysql"
  url      = env("DATABASE_URL")
}
"
`;

exports[`Generate Command Integration > Generator Integration > should handle different database providers > postgresql-provider 1`] = `
"generator client {
  provider = "prisma-client-js"
  output   = "../.opensaas/prisma-client"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}
"
`;

exports[`Generate Command Integration > Generator Integration > should handle different database providers > sqlite-provider 1`] = `
"generator client {
  provider = "prisma-client-js"
  output   = "../.opensaas/prisma-client"
}

datasource db {
  provider = "sqlite"
  url      = env("DATABASE_URL")
}
"
`;

exports[`Generate Command Integration > Generator Integration > should handle empty lists config > empty-lists-schema 1`] = `
"generator client {
  provider = "prisma-client-js"
  output   = "../.opensaas/prisma-client"
}

datasource db {
  provider = "sqlite"
  url      = env("DATABASE_URL")
}
"
`;

exports[`Generate Command Integration > Generator Integration > should handle empty lists config > empty-lists-types 1`] = `
"/**
 * Generated types from OpenSaas configuration
 * DO NOT EDIT - This file is automatically generated
 */

export type Context = {
  db: {
  }
  session: any
  prisma: any  // Your PrismaClient instance
}"
`;

exports[`Generate Command Integration > Generator Integration > should overwrite existing files > overwrite-after 1`] = `
"generator client {
  provider = "prisma-client-js"
  output   = "../.opensaas/prisma-client"
}

datasource db {
  provider = "sqlite"
  url      = env("DATABASE_URL")
}

model Post {
  id        String   @id @default(cuid())
  title        String?
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}
"
`;

exports[`Generate Command Integration > Generator Integration > should overwrite existing files > overwrite-before 1`] = `
"generator client {
  provider = "prisma-client-js"
  output   = "../.opensaas/prisma-client"
}

datasource db {
  provider = "sqlite"
  url      = env("DATABASE_URL")
}

model User {
  id        String   @id @default(cuid())
  name         String?
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}
"
`;
